syntax = "proto3";
package kratos.api;

option go_package = "stress/internal/conf;conf";

import "google/protobuf/duration.proto";
import "validate/validate.proto";

message Bootstrap {
    Server server = 1;
    Data data     = 2;
    Log log       = 3;
    Stress stress = 4;
}

message Server {
    message HTTP {
        string network                   = 1;
        string addr                      = 2;
        google.protobuf.Duration timeout = 3;
    }
    message GRPC {
        string network                   = 1;
        string addr                      = 2;
        google.protobuf.Duration timeout = 3;
    }
    HTTP http = 1;
    GRPC grpc = 2;
}

message Data {
    message Database {
        string driver        = 1;
        string source        = 2;
        int32 max_idle_conns = 3;
        int32 max_open_conns = 4;
    }
    message Redis {
        string network                         = 1;
        repeated string addr                   = 2;
        string password                        = 3;
        int32 db                               = 4;
        google.protobuf.Duration read_timeout  = 5;
        google.protobuf.Duration write_timeout = 6;
    }
    message S3 {
        string region            = 1;
        string access_key_id     = 2;
        string secret_access_key = 3;
        string bucket            = 4;
        string endpoint          = 5;
    }

    Database database       = 1;
    Database order_database = 2;
    Redis redis             = 3;
    S3 s3                   = 4;
}

message Log {
    int32 mode    = 1;
    string level  = 2;
    string app    = 3;
    string prefix = 4;
    string dir    = 5;
    bool file     = 6;
}

// 压测系统配置
message Stress {
    // 通知（飞书 Webhook）
    message Notify {
        bool enabled          = 1;  // 开关，false 时不发送
        string prefix         = 2;  // 消息前缀，如 [stress] 用于区分来源
        string webhook_url    = 3;  // 飞书 Webhook 地址
        string signing_secret = 4;  // 签名密钥，配置后启用加签
    }
    // 图表生成与S3上传配置
    message Chart {
        bool generate_local = 1;  // 是否生成本地文件（HTML/PNG）
        bool upload_to_s3   = 2;  // 是否上传到S3
    }
    // 成员数据加载配置
    message Member {
        bool auto_loads       = 1;
        int32 interval_sec    = 2;
        int32 batch_load_size = 3;
        int32 max_load_total  = 4;
        string member_prefix  = 5;
    }
    // 启动配置（API和认证配置）
    message Launch {
        repeated string sites = 1;                                             // SITE标识，用于Redis清理
        string merchant       = 2;                                             //
        string api_url        = 3 [(validate.rules).string = { min_len: 1 }];  // API地址
        string launch_url     = 4 [(validate.rules).string = { min_len: 1 }];  // 启动地址
        bool sign_required    = 5;
    }

    Notify notify = 1;
    Chart chart   = 2;
    Member member = 3;
    Launch launch = 4;
}
